1999-07-05    <mgd@HELEN>

	* avcall.h.in (MSVC): Set on _MSC_VER.
	Replace use of _MSC_VER with MSVC throughout.

	* Makefile.in (avcall-i386-msvc.s): Pass -DMSVC.

1999-07-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (avcall-i386-msvc.[so]): New rules.
	(OS): New substitution.
	(OBJECTS): Adding avcall-msvc.o in cygwin case.

	* asmi386.h (ALIGN): Add special case for Cygwin/Mingw32.

1999-07-04  Alex Lancaster  <alex@santafe.edu>

	* aclocal.m4 (host_cpu, host_vendor, host_os): Use sed regexps
	from the 2.13 autoconf distribution, existing regexps assumed
	canonical hostname always consists of three hyphenated components,
	but there can be more.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tests.c (structure_tests): Disable F_Ffd test.  It doesn't
	work on alphaev56-dec-osf4.0d, but that feature isn't needed for
	Swarm.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (avcall.o): Remove avcall.lo as well.

1999-06-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (distdir): Copy the toplevel files and the files
	in tests.output to $(distdir).  Remove the CVS directories.

1999-06-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (CC): Add @PICFLAGS@.
	(distdir): New empty rule.
	(avcall.o): Add link to .lo as well.
	(avcall-alphaev56.o avcall-alpha.o): alphaev56 is like alpha.
	(install): Make it a nop.

	* aclocal.m4: Copy here (from parent ../autoconf in ffcall).
