@@ -1,8 +1,8 @@
 #include "asmi386.h"
 TEXT()
 	ALIGN(2)
-GLOBL(C(__builtin_avcall))
-FUNBEGIN(__builtin_avcall)
+GLOBL(C(__msvc_builtin_avcall))
+FUNBEGIN(__msvc_builtin_avcall)
 	INSN1(push,l	,R(ebp))
 	INSN2(mov,l	,R(esp),R(ebp))
 	INSN1(push,l	,R(esi))
