@@ -1031,7 +1031,11 @@ typedef struct
  * calling the function
  */
 
+#ifndef MSVC
 #define av_call(LIST) __builtin_avcall(&(LIST))
+#else
+#define av_call(LIST) __msvc_builtin_avcall(&(LIST))
+#endif
 
 /* Determine whether a struct type is word-splittable, i.e. whether each of
  * its components fit into a register.
@@ -1067,12 +1071,26 @@ typedef struct
  * Miscellaneous declarations.
  */
 
+#ifndef MSVC
 #if defined(__STDC__) || defined(__GNUC__) || defined(__cplusplus)
 extern int __builtin_avcall (av_alist* l);
-extern void __structcpy (void* dest, void* src, unsigned long size, unsigned long alignment);
 #else
 extern int __builtin_avcall ();
+#endif
+#else
+#if defined(__STDC__) || defined(__GNUC__) || defined(__cplusplus)
+extern int __msvc_builtin_avcall (av_alist* l);
+#else
+extern int __msvc_builtin_avcall ();
+#endif
+#endif
+
+#if defined(__STDC__) || defined(__GNUC__) || defined(__cplusplus)
+extern void __structcpy (void* dest, void* src, unsigned long size, unsigned long alignment);
+#else
 extern void __structcpy ();
 #endif
 
 #endif /*_avcall_h */
+
+
